2012-11-08  Jakob Petsovits  <jpetsovits@rim.com>

        [BlackBerry] Rework the API to use document coordinates
        https://bugs.webkit.org/show_bug.cgi?id=101608
        RIM PR 173292

        Reviewed by Adam Treat.

        Scrolling and zooming APIs used to operate on
        transformed coordinates, which is a bad idea:
        The UI thread might long have moved on to a
        different scale and scroll position so outdated
        pixel coordinates are of limited value.

        Moreover, more transformation calculations are
        needed than if we operate purely on document
        coordinates.

        With webkitThreadViewportAccessor() exposed,
        the caller has a choice between how to handle
        coordinates and the means to perform conversions
        with little effort and overhead if needed.
        Therefore, we should remove pixel coordinates
        from the public API. This commit makes this change.

        * Api/BackingStore.cpp:
        (BlackBerry::WebKit::BackingStorePrivate::repaint):
        (BlackBerry::WebKit::BackingStorePrivate::didRenderContent):
        * Api/InRegionScroller.cpp:
        (BlackBerry::WebKit::InRegionScroller::setDocumentScrollPositionCompositingThread):
        (BlackBerry::WebKit::InRegionScroller::setDocumentScrollPositionWebKitThread):
        (BlackBerry::WebKit::InRegionScrollerPrivate::calculateInRegionScrollableAreasForPoint):
        * Api/InRegionScroller.h:
        * Api/WebPage.cpp:
        (BlackBerry::WebKit::WebPagePrivate::WebPagePrivate):
        (BlackBerry::WebKit::WebPagePrivate::setLoadState):
        (BlackBerry::WebKit::WebPagePrivate::shouldZoomAboutPoint):
        (BlackBerry::WebKit::WebPagePrivate::zoomAboutPoint):
        (BlackBerry::WebKit::WebPage::setDocumentScrollPosition):
        (BlackBerry::WebKit::WebPagePrivate::hasVirtualViewport):
        (BlackBerry::WebKit::WebPagePrivate::notifyTransformedContentsSizeChanged):